objects/BCContract2__x.object
<CustomObject>
    <description>BCContract2</description>
    <externalDataSource>BCContract2</externalDataSource>
    <externalName>BCContract2</externalName>
    <fields>
        <fullName>SFDCContract__c</fullName>
        <externalDeveloperName>contractId</externalDeveloperName>
        <label>SFDCContract</label>
        <length>18</length>
        <referenceTargetField>Contract.BCContractId__c</referenceTargetField>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>BCContract2</relationshipLabel>
        <relationshipName>BCContract2</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>arrivalDateTime__c</fullName>
        <externalDeveloperName>arrivalDateTime</externalDeveloperName>
        <label>arrivalDateTime</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <description>class</description>
        <externalDeveloperName>class</externalDeveloperName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contractId__c</fullName>
        <description>contractId</description>
        <externalDeveloperName>contractId</externalDeveloperName>
        <label>contractId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>grower__c</fullName>
        <description>grower</description>
        <externalDeveloperName>grower</externalDeveloperName>
        <label>grower</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>importer__c</fullName>
        <description>importer</description>
        <externalDeveloperName>importer</externalDeveloperName>
        <label>importer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxPenaltyFactor__c</fullName>
        <description>maxPenaltyFactor</description>
        <externalDeveloperName>maxPenaltyFactor</externalDeveloperName>
        <label>maxPenaltyFactor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxTemperature__c</fullName>
        <description>maxTemperature</description>
        <externalDeveloperName>maxTemperature</externalDeveloperName>
        <label>maxTemperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minPenaltyFactor__c</fullName>
        <description>minPenaltyFactor</description>
        <externalDeveloperName>minPenaltyFactor</externalDeveloperName>
        <label>minPenaltyFactor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>minTemperature__c</fullName>
        <description>minTemperature</description>
        <externalDeveloperName>minTemperature</externalDeveloperName>
        <label>minTemperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>shipper__c</fullName>
        <description>shipper</description>
        <externalDeveloperName>shipper</externalDeveloperName>
        <label>shipper</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitPrice__c</fullName>
        <externalDeveloperName>unitPrice</externalDeveloperName>
        <label>unitPrice</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>BCContract2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>contractId__c</columns>
        <columns>DisplayUrl</columns>
        <columns>grower__c</columns>
        <columns>importer__c</columns>
        <columns>shipper__c</columns>
        <columns>maxPenaltyFactor__c</columns>
        <columns>maxTemperature__c</columns>
        <columns>minPenaltyFactor__c</columns>
        <columns>minTemperature__c</columns>
        <columns>ExternalId</columns>
        <columns>arrivalDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>BCContract2</pluralLabel>
</CustomObject>